@@ -1,3 +1,13 @@
+2002-02-11  Alexandre Oliva  <aoliva@redhat.com>
+
+	* elf32-sh.c: Added missing prototypes.
+	* elf32-sh64.c: Likewise.
+	(sh_elf_align_loads): Mark unused args as such.
+	* elf64-sh64.c: Added missing prototypes.
+	(struct elf_sh64_link_hash_entry): Fix typo.
+	(sh_elf64_relocate_section): Fix info argument passed to
+	_bfd_elf_section_offset.
+
 2002-02-10  Daniel Jacobowitz  <drow@mvista.com>
 
 	* coff-rs6000.c (xcoff_generate_rtinit): Silence uninitialized
